--- a/styles/legal_privacy.css
+++ b/styles/legal_privacy.css
@@ -101,8 +101,9 @@ h1{
     white-space: wrap;
 }
 
-nav{
+nav {
     position: fixed;
+    z-index: 100;
 }
 
 }
